# python-libreoffice-pandas-ext

./: Makefile  README.md  cspell.json  make.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/res/defaults/: registrymodifications.xcu
macro/: numpy_ex.py  pandas_ex.py
oxt/: py_runner.py
oxt/___lo_pip___/: basic_config.py  config.py
oxt/___lo_pip___/dialog/: message_dialog.py
oxt/___lo_pip___/dialog/handler/: install.py  logger_options.py  options.py  uninstall.py
oxt/___lo_pip___/install/: requirements_check.py
oxt/___lo_pip___/install/pkg_installers/: install_pkg.py
oxt/___lo_pip___/install/py_packages/: package_config.py  packages.py
oxt/___lo_pip___/lo_util/: target_path.py
oxt/___lo_pip___/oxt_logger/: oxt_logger.py
oxt/___lo_pip___/settings/: install_settings.py  options.py
oxt/___lo_pip___/ver/: req_version.py
oxt/___lo_pip___/ver/rules/: equals_star.py  ver_rules.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: install.xdl  options.xdl  uninstall.xdl
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
src/: build.py
src/processing/: json_config.py  token.py
src/processing/bz2_process/: __init__.py  bz2_processer.py
src/security/: md5_ops.py
tests/general_tests/: test_packages.py
tests/test_rules/: test_ver_rules.py
tests/test_version/: test_requirements_check.py
