[tool.oxt.requirements]
pandas = ">=2"
odfpy = ">=1.4"
ooo-dev-tools = ">=0.29.0"

[tool.poetry]
name = "lo_pandas_ext"
version = "1.0.5"
description = "Pandas for LibreOffice"
authors = [":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]


# See: https://github.com/Amourspirit/python-libreoffice-pandas-ext/wiki/pyproject.toml
[tool.oxt.config]
auto_install_in_site_packages = true
build_dir = "build"
dist_dir = "dist" # should be changed to someting like dist, tmp_dist is not included in git
install_wheel = true
oxt_name = "pandas"
py_pkg_dir = "py_pkgs"
py_pkg_files = []
py_pkg_names = [] # ["ooodev", "ooo"]
token_file_ext = ["txt", "xml", "xcu", "xcs"]
update_file = "update.xml"
zip_preinstall_pure = true
window_timeout = 5 # number of seconds to wait for window to appear
dialog_desktop_owned = false # determines if the dialog is owned by the desktop window
resource_dir_name = "resources"
resource_properties_prefix = "pipstrings"
default_locale = ["en", "US"]
sym_link_cpython = true
uninstall_on_update = true # https://tinyurl.com/ymeh4c9j#uninstall_on_update uninstall previous python packages on update
install_on_no_uninstall_permission = true # https://tinyurl.com/ymeh4c9j#install_on_no_uninstall_permission

[tool.oxt.token]
# in the form of "token_name": "token_value"
# in the files the token will have a prefix and suffix of ___
pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
test_internet_url = "https://duckduckgo.com"
log_pip_installs = false
lo_identifier = "com.github.amourspirit.extensions.pandas"
lo_implementation_name = "PandasRunner"
display_name = "Pandas for LibreOffice"
description = "Pandas is a fast, powerful, flexible and easy to use open source data analysis and manipulation tool."
publisher = "AmourSpirit"
publisher_url = "https://github.com/Amourspirit/python-libreoffice-pandas-ext"
update_url_xml = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-pandas-ext/main/___dist_dir___/___update_file___"
update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-pandas-ext/main/___dist_dir___/___oxt_name___.oxt"
url_pip = 'https://bootstrap.pypa.io/get-pip.py'
# set log_file to "" to disable logging
log_file = "pandas_install.log"
log_name = "Pandas Installer"
log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_add_console = false # should be false for production
lo_pip = "lo_pandas"
platform = "all"
startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask
show_progress = true
delay_startup = true # determines if installing waits fo the window to load before installing

[tool.oxt.isolate]
windows = ["pandas"]

[tool.oxt.preinstall.pure]
# verr = ">=1.1.2"

[tool.oxt.locale.publisher]
en = { name = "___publisher___", url="___publisher_url___" }

[tool.oxt.bz2.32_bit]
"3.8" = { url = "https://www.python.org/ftp/python/3.8.10/python-3.8.10-embed-win32.zip", md5="659adf421e90fba0f56a9631f79e70fb" }
"3.9" = { url = "https://www.python.org/ftp/python/3.9.13/python-3.9.13-embed-win32.zip", md5="fec0bc06857502a56dd1aeaea6488ef8" }
"3.10" = { url = "https://www.python.org/ftp/python/3.10.11/python-3.10.11-embed-win32.zip", md5="fee70dae06c25c60cbe825d6a1bfda57" }
"3.11" = { url = "https://www.python.org/ftp/python/3.11.6/python-3.11.6-embed-win32.zip", md5="d035d12d72e2d62b6e5219ea8f3bda39" }
"3.12" = { url = "https://www.python.org/ftp/python/3.12.0/python-3.12.0rc3-embed-win32.zip", md5="b6ed11598c929af946a110ca4db0d95c" }

[tool.oxt.bz2.64_bit]
"3.8" = { url = "https://www.python.org/ftp/python/3.8.10/python-3.8.10-embed-amd64.zip", md5="3acb1d7d9bde5a79f840167b166bb633" }
"3.9" = { url = "https://www.python.org/ftp/python/3.9.13/python-3.9.13-embed-amd64.zip", md5="57731cf80b1c429a0be7133266d7d7cf" }
"3.10" = { url = "https://www.python.org/ftp/python/3.10.11/python-3.10.11-embed-amd64.zip", md5="f1c0538b060e03cbb697ab3581cb73bc" }
"3.11" = { url = "https://www.python.org/ftp/python/3.11.6/python-3.11.6-embed-amd64.zip", md5="ff5f34b8d2504c49fc94ffc29998b8a0" }
"3.12" = { url = "https://www.python.org/ftp/python/3.12.0/python-3.12.0rc3-embed-arm64.zip", md5="728cbbfd0d5fc485233e1aba7884a773" }

[tool.oxt.locale.name]
en = "___display_name___"
fr = "Pandas pour LibreOffice"
de = "Pandas für LibreOffice"
pt = "Pandas para LibreOffice"
es = "Pandas para LibreOffice"

[tool.oxt.locale.desc]
en = "___description___"
fr = "Pandas est un outil d'analyse et de manipulation de données open source rapide, puissant, flexible et facile à utiliser."
de = "Pandas ist ein schnelles, leistungsstarkes, flexibles und benutzerfreundliches Open-Source-Tool zur Datenanalyse und -manipulation."
pt = "Pandas é uma ferramenta de análise e manipulação de dados de código aberto rápida, poderosa, flexível e fácil de usar."
es = "Pandas es una herramienta de análisis y manipulación de datos de código abierto rápida, potente, flexible y fácil de usar."


[tool.poetry.dependencies]
python = "^3.8"
ooouno = "^2.1.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
types-scriptforge = ">=2.0.1"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
black = "^23.7.0"
oooscript = "^1.1.3"
oooenv = "^0.2.2"
lxml = "^4.9.3"
ooo-dev-tools = ">=0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    no-name-in-module,
    no-self-argument
"""

[tool.pyright]
include = ["src"]
reportMissingModuleSource = false

[tool.ruff]
extended-select = ["ANN", "C4", "N", "SIM", "TCH"]
ignore = ["E501"]
show-fixes = true
target = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
    "skip_headless: skips a test in headless mode",
    "skip_not_headless_os: skips a test in GUI mode for give os",
]
